# clawser

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GAPS.md  LICENSE  OUTSTANDING.md  PRD.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  playwright.config.js  vitest.config.js  wrangler.jsonc
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.reference/: mesh-rollup-plan.md  suarez-inspired-ideas.md  webroll-package-design.md
crates/clawser-core/: Cargo.toml
crates/clawser-core/src/: lib.rs
crates/clawser-core/src/agent/: mod.rs
crates/clawser-core/src/checkpoint/: mod.rs
crates/clawser-core/src/config/: mod.rs
crates/clawser-core/src/events/: mod.rs
crates/clawser-core/src/git/: mod.rs
crates/clawser-core/src/identity/: mod.rs
crates/clawser-core/src/memory/: mod.rs
crates/clawser-core/src/observe/: mod.rs
crates/clawser-core/src/providers/: mock.rs  mod.rs
crates/clawser-core/src/scheduler/: mod.rs
crates/clawser-core/src/session/: mod.rs
crates/clawser-core/src/syscall/: mod.rs
crates/clawser-core/src/tools/: mod.rs
crates/clawser-wasm/: Cargo.toml
crates/clawser-wasm/src/: host.rs  lib.rs  state.rs
crates/wsh-cli/: Cargo.toml
crates/wsh-cli/src/: config.rs  known_hosts.rs  main.rs  terminal.rs
crates/wsh-cli/src/commands/: agent.rs  check.rs  common.rs  connect.rs  copy_id.rs  exec.rs  interactive.rs  keygen.rs  keys.rs  mod.rs  relay.rs  reverse_host.rs  scp.rs  sessions.rs  tools.rs
crates/wsh-client/: Cargo.toml
crates/wsh-client/src/: auth.rs  client.rs  file_transfer.rs  keystore.rs  known_hosts.rs  lib.rs  mcp.rs  session.rs  virtual_session.rs
crates/wsh-client/src/transport/: mod.rs  websocket.rs  webtransport.rs
crates/wsh-core/: Cargo.toml
crates/wsh-core/src/: codec.rs  error.rs  identity.rs  keys.rs  lib.rs  messages.gen.rs  messages.rs  remote_runtime.rs  token.rs  transport.rs
crates/wsh-server/: Cargo.toml
crates/wsh-server/src/: config.rs  handshake.rs  main.rs  server.rs
crates/wsh-server/src/auth/: mod.rs  permissions.rs  rate_limit.rs
crates/wsh-server/src/gateway/: forwarder.rs  listener.rs  mod.rs  policy.rs  resolver.rs
crates/wsh-server/src/mcp/: bridge.rs  mod.rs  proxy.rs
crates/wsh-server/src/relay/: broker.rs  mod.rs  registry.rs
crates/wsh-server/src/session/: manager.rs  mod.rs  pty.rs  recording.rs  ring_buffer.rs
crates/wsh-server/src/transport/: mod.rs  websocket.rs  webtransport.rs
demo/: Cargo.toml  README.md
demo/code_refactoring/: main.rs
demo/digital_maintenance/: main.rs
demo/health_investigation/: main.rs
demo/research_lab/: main.rs
demo/security_sentinel/: main.rs
demo/skill_learning/: main.rs
demo/trip_planning/: main.rs
demo/writing_companion/: main.rs
docs/: API.md  ARCHITECTURE-AUDIT.md  BROWSERMCP-EVALUATION.md  CLI.md  CONFIG.md  DEPLOY.md  DEPLOYMENT.md  EVENT-LOG.md  FEATURES.md  FIREFOX-COMPAT.md  INTERNALS.md  MODULES.md  PHASE-7A-IMPLEMENTATION-PLAN.md  PHASE-8-REMOTE-RUNTIME-PLAN.md  PLUGINS.md  REMOTE-RUNTIME-CONTRACTS.md  REVERSE-BROWSER-TERMINAL-BACKLOG.md  ROADMAP-ARCHIVE.md  SERVER.md  TESTING.md  TOOLS.md  VAULT.md  WSH-INTO-CLAWSER.md  bug-hunt-2026-05-04.md  cli-enhancement-plan.md  comprehensive-audit-2026-05-04.md  cross-validation-2026-05-02.md  doc-audit-2026-05-02.md  gap-closure-plan.md  generate.mjs  guide-expansion-2026-05-04.md  heynote-block79-cli-enhancements.txt  implementation-status.md  issue-triage-2026-05-04.md  multi-device-deploy.md  panel-audit-2026-05-04.md  panel-convergence-2026-05-04.md  qa-report.md  race-and-timer-audit-2026-05-04.md  residual-audit-2026-05-04.md  (+5 more)
docs-site/: astro.config.mjs  package-lock.json  package.json
e2e/: audit-wiring.mjs  exercise-all.mjs  exercise-chat.mjs  exercise-chat2.mjs  explore-mesh.mjs  fix-remaining.mjs  fix-remaining2.mjs  full-mesh-connect.mjs  p2p-full-mesh.test.mjs  p2p-mdns-browser.test.mjs  p2p-mesh-subsystems.test.mjs  p2p-pex-transitive.test.mjs  p2p-server-pods.test.mjs  p2p-signaling.test.mjs  p2p-swim-failure.test.mjs  p2p-test-page.html  probe-podid.mjs  probe.mjs  raijin-consensus.test.mjs  step-broadcast.mjs  step-check-file-offer.mjs  step-check-messages.mjs  step-check-peers.mjs  step-check-router-messages.mjs  step-check-stream-received.mjs  step-check-swim-state.mjs  step-pex-check-discovery.mjs  step-pex-signaling-selective.mjs  step-pex-webrtc-pair.mjs  step-pex-wire.mjs  step-signaling.mjs  step-test-acl.mjs  step-test-audit.mjs  step-test-chat.mjs  step-test-consensus.mjs  step-test-file-transfer.mjs  step-test-health.mjs  step-test-router-delivery.mjs  step-test-router.mjs  step-test-scheduler.mjs  (+8 more)
extension/: background.js  manifest.json
guide/: _meta.md  _workspaces.md.bak  agents.md  build.md  channels.md  core.md  daemon.md  getting-started.md  hardware.md  index.md  memory.md  mesh.md  multi-device.md  networking.md  pods.md  providers.md  safety.md  scheduling.md  shell.md  skills.md  tools.md  ui.md  workspace.md
raijin/: README.md  package.json  turbo.json
scripts/: screenshots.mjs
server/: README.md
tests/: browser.spec.js
tools/: wsh-operator-cli.mjs  wsh-server.mjs
web/: Procfile  bench.html  clawser-accounts.d.ts  clawser-accounts.js  clawser-agent-ref.d.ts  clawser-agent-ref.js  clawser-agent-storage.d.ts  clawser-agent-storage.js  clawser-agent.d.ts  clawser-agent.js  clawser-andbox-cli.d.ts  clawser-andbox-cli.js  clawser-app.d.ts  clawser-app.js  clawser-approval-modal.mjs  clawser-auth-profiles.d.ts  clawser-auth-profiles.js  clawser-autonomy-presets.js  clawser-background-runner.js  clawser-bridge.d.ts  clawser-bridge.js  (+360 more)
(+566 files in other folders)
