[workspace]
members = [
    "crates/clawser-core",
    "crates/clawser-wasm",
    "crates/wsh-core",
    "crates/wsh-client",
    "crates/wsh-cli",
    "crates/wsh-server",
    "demo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
