[package]
name = "clawser-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent runtime for Clawser browser-native AI agent OS"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
