[package]
name = "wsh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for wsh (Web Shell) — SSH-like remote access over WebTransport/WebSocket"
publish = false

[[bin]]
name = "wsh"
path = "src/main.rs"

[dependencies]
wsh-core = { path = "../wsh-core" }
wsh-client = { path = "../wsh-client" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dialoguer = "0.11"
dirs = "6"
toml = "0.8"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
