[package]
name = "wsh-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust client library for wsh (Web Shell) — native WebTransport/WebSocket client"

[dependencies]
wsh-core = { path = "../wsh-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
quinn = "0.11"
tokio-tungstenite = "0.24"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
dirs = "6"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
