[package]
name = "wsh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared protocol library for wsh (Web Shell) — CBOR messages, codec, identity, auth"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ciborium = "0.2"
ssh-key = { version = "0.6", features = ["ed25519"] }
ring = "0.17"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
