[package]
name = "wsh-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Server binary for wsh (Web Shell) — accepts WebTransport/WebSocket connections"
publish = false

[[bin]]
name = "wsh-server"
path = "src/main.rs"

[dependencies]
wsh-core = { path = "../wsh-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio", "ring"] }
tokio-tungstenite = "0.24"
portable-pty = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
